/*
Copyright Â© 2021-2022 Nikita Ivanovski info@slnt-opp.xyz

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
syntax = "proto3";
package nocloud.edge;

import "pkg/states/proto/states.proto";

message TestRequest {}
message TestResponse {
    bool result = 1;
    string error = 2;
}
message Empty {}

service EdgeService {
    rpc Test(TestRequest) returns (TestResponse);
    rpc PostState(nocloud.states.ObjectState) returns (Empty);
}